src/ui/snapshots/work_tui__ui__label_picker__tests__label_picker_fuzzy_filter.snap
---
source: src/ui/label_picker.rs
expression: output
---
                                                            
                                                            
                                                            
            ┌ Add repo label ──────────────────┐            
            │/  bka                            │            
            │                                  │            
            │                                  │            
            │backend-api                       │            
            │/home/user/repos/backend-api      │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            └──────────────────────────────────┘
