src/ui/snapshots/work_tui__ui__label_picker__tests__label_picker_fuzzy_filter_no_matches.snap
---
source: src/ui/label_picker.rs
expression: output
---
                                                            
                                                            
                                                            
            ┌ Add repo label ──────────────────┐            
            │/  zzzzz                          │            
            │                                  │            
            │                                  │            
            │No matches                        │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            └──────────────────────────────────┘
