src/ui/snapshots/work_tui__ui__label_picker__tests__label_picker_with_entries.snap
---
source: src/ui/label_picker.rs
assertion_line: 311
expression: output
---
                                                            
                                                            
                                                            
            ┌ Add repo label ──────────────────┐            
            │/  Type to filter...              │            
            │                                  │            
            │                                  │            
            │frontend-app                      │            
            │/home/user/repos/frontend-app     │            
            │backend-api                       │            
            │/home/user/repos/backend-api      │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            │                                  │            
            └──────────────────────────────────┘
